Time: 1 ms (99.87%), Space: 44.6 MB (80.24%) - LeetHub